Pagina finalizada con las funcionalidades requeridas, Docker incluido

--- a/Frontend/miAppFront/src/pages/auth/Auth.css
+++ b/Frontend/miAppFront/src/pages/auth/Auth.css
@@ -1,4 +1,4 @@
-#register-section, #login-section {
+#register-section, #login-section, #profile-section {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
